plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.0'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.sparta'
version = '1.0.0'
sourceCompatibility = '17'

repositories {
    mavenCentral() // MySQL Connector와 Spring Boot 종속성의 중앙 저장소
}

dependencies {

    // Spring Boot Starter Test (JUnit 5 포함)
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // JWT (io.jsonwebtoken 라이브러리) - JwtUtil 테스트용
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // WebTestClient - WebFlux 테스트용 (통합 테스트)
    testImplementation 'org.springframework.boot:spring-boot-starter-webflux'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'mysql:mysql-connector-java:8.0.33' // MySQL Connector 추가
    implementation 'org.projectlombok:lombok'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
    annotationProcessor 'org.projectlombok:lombok'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2', 'io.jsonwebtoken:jjwt-jackson:0.11.2'
}

tasks.named('test') {
    useJUnitPlatform()
}
